kluge: suppress restricted method warnings
fix #866