@@ -32,6 +32,10 @@ if [ "${1-}" != '--no-classpath' ]; then
   export COATJAVA_CLASSPATH
 fi
 
+# java options
+# suppressions of "WARNING: A restricted method in java.lang.System has been called"
+export JAVA_OPTS="--enable-native-access=org.sqlite.SQLiteJDBCLoader,net.jpountz.util.Native ${JAVA_OPTS-}"
+
 # additional environment variables for groovy or interactive use
 # - call as `source $0 groovy` or `source $0 jshell`
 if [ $# -ge 1 ]; then
